--- a/package.json
+++ b/package.json
@@ -10,12 +10,13 @@
     "@web3-react/core": "^6.1.9",
     "@web3-react/injected-connector": "^6.0.7",
     "antd": "^4.20.4",
+    "ethers": "^5.7.1",
+    "papaparse": "^5.3.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.4.0",
     "react-lottie": "^1.2.3",
     "react-router-dom": "^6.3.0",
-    "ethers": "^5.7.1",
     "react-scripts": "^5.0.1",
     "sweetalert2": "^11.6.15",
     "web-vitals": "^2.1.4",
